[package]
name = "rlm2c"
description = "Mouse (and keyboard) to controller emulator"
version = "0.1.2"
authors = ["Joe Kaushal <joe.kaushal@gmail.com>"]
edition = "2021"
repository = "https://github.com/bozbez/rlm2c"
license = "MIT OR Apache-2.0"

[dependencies]
vigem = "0.9.1"
interception = "0.1.2"
cpal = "0.13.5"

anyhow = "1.0.57"
bitflags = "1.3.2"

serde = { version = "1.0.137", features = ["derive"] }
clap = { version = "3.1.14", features = ["derive"] }
ron = "0.7.0"

log = "0.4.16"
env_logger = "0.9.0"
